--- a/src/assets/styles/statisticsCard.css
+++ b/src/assets/styles/statisticsCard.css
@@ -13,6 +13,8 @@
 .statistics-title,
 .sub-content {
   color: #888686;
+  font-size: 0.9em;
+  font-weight: 500;
 }
 
 .variation {
